--- a/LiveCoding/app/src/main/AndroidManifest.xml
+++ b/LiveCoding/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="br.com.beblue.fatec.livecoding">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -11,6 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity
             android:name=".ui.main.MainActivity"
             android:label="@string/app_name"
